--- a/backup/test-output/old/Default suite/methods.html
+++ b/backup/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b6398">  <td>21/10/04 14:28:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.LaunchBrowser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vyomlabs.backup.scripts.TC002@53f65459]">&gt;&gt;LaunchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1630521067</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/10/04 14:28:27</td>   <td>11872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Login(java.lang.String, java.lang.String)[pri:0, instance:com.vyomlabs.backup.scripts.TC002@53f65459]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@1630521067</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/10/04 14:28:28</td>   <td>13659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002.deleteProduct()[pri:0, instance:com.vyomlabs.backup.scripts.TC002@53f65459]">deleteProduct</td> 
-  <td>main@1630521067</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/10/04 14:28:40</td>   <td>25723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Logout(org.testng.ITestResult)[pri:0, instance:com.vyomlabs.backup.scripts.TC002@53f65459]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td>main@1630521067</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/10/04 14:28:43</td>   <td>28372</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseApp()[pri:0, instance:com.vyomlabs.backup.scripts.TC002@53f65459]">&lt;&lt;CloseApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1630521067</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>21/10/05 13:44:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.LaunchBrowser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vyomlabs.backup.scripts.TC003@2d6eabae]">&gt;&gt;LaunchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>21/10/05 13:44:34</td>   <td>11461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Login(java.lang.String, java.lang.String)[pri:0, instance:com.vyomlabs.backup.scripts.TC003@2d6eabae]">&gt;&gt;Login</td> 
+<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/10/05 13:44:36</td>   <td>13591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.testLogin()[pri:0, instance:com.vyomlabs.backup.scripts.TC003@2d6eabae]">testLogin</td> 
+  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>21/10/05 13:44:47</td>   <td>24453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Logout(org.testng.ITestResult)[pri:0, instance:com.vyomlabs.backup.scripts.TC003@2d6eabae]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="6b6398">  <td>21/10/05 13:45:05</td>   <td>42400</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.CloseApp()[pri:0, instance:com.vyomlabs.backup.scripts.TC003@2d6eabae]">&lt;&lt;CloseApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
