added test cases for TC004

--- a/backup/test-output/index.html
+++ b/backup/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\manis\AppData\Local\Temp\testng-eclipse-2057522279\testng-customsuite.xml</span>
+                    <span>C:\Users\manis\AppData\Local\Temp\testng-eclipse--601357541\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vyomlabs.backup.scripts.TC003" hash-for-method="testLogin">testLogin</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vyomlabs.backup.scripts.TC003" hash-for-method="testScreenshot">testScreenshot</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testLogin">
-                  </a> <!-- testLogin -->
-                  <span class="method-name">testLogin</span>
+                  <a name="testScreenshot">
+                  </a> <!-- testScreenshot -->
+                  <span class="method-name">testScreenshot</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
 	at org.testng.Assert.fail(Assert.java:99)
 	at org.testng.Assert.failNotEquals(Assert.java:1037)
@@ -137,7 +137,7 @@
 	at org.testng.Assert.assertEquals(Assert.java:122)
 	at org.testng.Assert.assertEquals(Assert.java:819)
 	at org.testng.Assert.assertEquals(Assert.java:829)
-	at com.vyomlabs.backup.scripts.TC003.testLogin(TC003.java:25)
+	at com.vyomlabs.backup.scripts.TC003.testScreenshot(TC003.java:25)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -177,7 +177,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\manis\AppData\Local\Temp\testng-eclipse-2057522279\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manis\AppData\Local\Temp\testng-eclipse--601357541\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -228,14 +228,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLogin')
+data.setCell(0, 1, 'testScreenshot')
 data.setCell(0, 2, 'com.vyomlabs.backup.scripts.TC003')
-data.setCell(0, 3, 10859);
+data.setCell(0, 3, 12073);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -268,23 +268,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">Login(godase.17@gmail.com, M@nisha17)</span>
-                <span class="method-start">11468 ms</span>
+                <span class="method-start">11602 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testLogin</span>
-                <span class="method-start">13599 ms</span>
+                <span class="method-name">testScreenshot</span>
+                <span class="method-start">13007 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">Logout([TestResult name=testLogin status=FAILURE method=TC003.testLogin()[pri:0, instance:com.vyomlabs.back...)</span>
-                <span class="method-start">24461 ms</span>
+                <span class="method-name">Logout([TestResult name=testScreenshot status=FAILURE method=TC003.testScreenshot()[pri:0, instance:com.vyo...)</span>
+                <span class="method-start">25082 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">CloseApp</span>
-                <span class="method-start">42408 ms</span>
+                <span class="method-start">30734 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
